[gd_scene load_steps=3 format=3 uid="uid://dtotqhans1uj3"]

[ext_resource type="PackedScene" uid="uid://d1ksajbwrlnym" path="res://Scenes/Objects/MonsieurGuilly.tscn" id="1_bujmf"]
[ext_resource type="Script" path="res://Scripts/GuillyTime.gd" id="1_yebls"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yebls")

[node name="MonsieurGuilly" parent="." instance=ExtResource("1_bujmf")]
position = Vector2(578, 328)

[node name="LabelFinishHim" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
